--- a/style.css
+++ b/style.css
@@ -387,6 +387,103 @@ footer .carte iframe {
 }
 /*FIN Style footer*/
 
+/* ----------------------------- */
+/* VERSION RESPONSIVE             */
+/* ----------------------------- */
+/* Style version RESPONSIVE*/
+@media screen and (max-width: 480px)
+{
+    /*style commun*/
+    body{
+        background: url('images/background.png');
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: normal;
+        color: #666663;
+    }
+    #main_wrapper{
+        width: auto;
+        margin: 0 10px;
+    }
+    /*Fin style commun*/
+
+    /*style header*/
+    header h1{
+        font-size: 4.5em;
+    }
+    header h2{
+        font-size: 1.5em;
+    }
+    header img{
+        float: none;
+        margin-right: 0px;
+    }
+    /*Fin style header*/
+
+    /*Style Nav*/
+    nav ul{
+        border: none;
+        padding-left: 30px;
+    }
+    nav li{
+        display: block;
+        width: auto;
+        text-align: left;
+    }
+    nav a{
+        font-size: 1.2em;
+        line-height: 3em;
+    }
+    nav a[href*="viadeo"], 
+    nav a[href*="twitter"], 
+    nav a[href*="twitter"], 
+    nav a[href*="facebook"], 
+    nav a[href*="linkedin"], 
+    nav a[href*="mailto"]{
+        background:none;
+    }
+    /*Fin style Nav*/
+
+    /*Style section*/
+    .competences h1,
+    .experiences h1,
+    .formations h1,
+    .interet h1{
+        background : none;
+    }
+    .competences ul li{
+        width: auto;
+    }
+    .experiences ul li {
+        padding-left: 0px;
+    }
+    .experiences ul li.simpleit, 
+    .experiences ul li.mcdonalds, 
+    .experiences ul li.tavel {
+        background: none;
+    }
+    .interet ul li {
+        width: auto;
+        display: block;
+    }
+    /*FIN Style section*/
+
+    /*Style footer*/
+    footer h1{
+        background: none;
+    }
+    footer form{
+        width: auto;
+        float: none;
+    }
+    footer aside{
+        float: none;
+        width: auto;
+    }
+    footer .carte iframe {
+        width: 100%;
+    }
+    /*FIN Style footer*/  
+}
 
 /* ----------------------------- */
 /* FIN      CSS    ZOZOR          */
